GNOME Bugzilla – Bug 690191
Web app hotkey combinations (like Ctrl+B) are intercepted by Epiphany
Last modified: 2013-03-19 08:36:42 UTC
PROBLEM Web application keyboard shortcuts do not work as intended, because they are intercepted by the Epiphany instance running the app. For instance, pressing Ctrl+B inside of WordPress' distraction-free editor brings up the Bookmarks menu, instead of having the desired effect of making text boldface. The same likely applies to other word processing apps, such as Google Drive. HOW TO REPRODUCE 1. Log in to Google Drive or a free WordPress.com account, in Web. 2. Use "Save as web application" to turn the site into a web app. 3. Launch the web app from GNOME Shell. 4. Use Ctrl+B to try to make text boldface, from inside the app. EXPECTED BEHAVIOUR First, web apps will not be broken. They will work as intended, and will not cause baffling technical errors. Second, Epiphany features like the Bookmarks and History views will not function inside a web app. As the Epiphany instance running the app conceptually _is_ the app, it should not have Epiphany features which are unrelated to running the app properly.
Fixed in 1068d46a3455abc, should be in 3.8.0. In the future refrain from adding stuff like : "First, web apps will not be broken. They will work as intended, and will not cause baffling technical errors." to bug reports. It is unnecessary and rude, and it does not help at all in making us fix things faster (quite the opposite).