ephy-window: disable a few more actions in application mode

Do not allow to launch bookmarks, history, preferences and personal
data editors through keyboard shortcuts in app mode.

https://bugzilla.gnome.org/show_bug.cgi?id=690191